--- a/sonata/app/config/routing.yml
+++ b/sonata/app/config/routing.yml
@@ -1,3 +1,8 @@
+bee_fit:
+    resource: "@BeeFitBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 app:
     resource: @AppBundle/Controller/
     type:     annotation
